Define iowa colors

--- a/beamerthemeuiowa.sty
+++ b/beamerthemeuiowa.sty
@@ -1,9 +1,10 @@
-\mode<presentation>
+\RequirePackage{tikz, xcolor}
 
-\RequirePackage{tikz}
-
-
-
+\definecolor{IowaGold}{RGB}{255,205,0}
+\definecolor{IowaGray}{RGB}{99,102,106}
+\definecolor{IowaBlue}{RGB}{0,85,140}
+\definecolor{IowaGreen}{RGB}{0,102,79}
+\definecolor{IowaRed}{RGB}{189,71,42}
 
 \setbeamercolor*{title page header}{fg=white}
 \setbeamercolor*{author}{fg=white}
