--- a/example.tex
+++ b/example.tex
@@ -1,9 +1,10 @@
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\title{There Is No Largest Prime Number}
-\date[ISPN ’80]{27th International Symposium of Prime Numbers}
-\author[Euclid]{Euclid of Alexandria \texttt{euclid@alexandria.edu}}
+\title{Example of the Presentation Title Slide}
+\subtitle{Presentation Subtitle}
+\date[ISPN ’80]{May 24, 2020}
+\author[Euclid]{Euclid of Alexandria}
 
 \usetheme{uiowa}
 
