--- a/example.tex
+++ b/example.tex
@@ -14,6 +14,12 @@
 \titlepage
 \end{frame}
 
+\begin{frame}
+\frametitle{Outline}
+\tableofcontents
+\end{frame}
+
+\section{Background}
 
 \begin{frame} 
 \frametitle{There Is No Largest Prime Number} 
@@ -36,4 +42,8 @@ number not in the first $p$ numbers.
 \end{itemize}
 \end{frame}
 
+\section{My awesome result}
+\begin{frame}{Any day now}
+	I swear its coming... soon
+\end{frame}
 \end{document}
