fix: scale the header when the title is too long
Closes #2, turns out I was saying too much. Beamer basically does this
on its own.

--- a/beamerthemeuiowa.sty
+++ b/beamerthemeuiowa.sty
@@ -90,10 +90,8 @@
 \setbeamerfont{frametitle}{series=\bfseries}
 \setbeamertemplate{frametitle}{
 	\nointerlineskip%
-	\begin{beamercolorbox}[sep=0.3cm, ht=1.8em, wd=\paperwidth]{frametitle}
-		\vbox{}\vskip-2ex%
+	\begin{beamercolorbox}[sep=0.25em, wd=\paperwidth]{frametitle}
 		\strut\insertframetitle\strut%
-		\vskip-0.8ex%
 	\end{beamercolorbox}
 }
 
