--- a/example.tex
+++ b/example.tex
@@ -35,7 +35,7 @@ number not in the first $p$ numbers.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}{A longer title}
+\begin{frame}{A really really long title to check the behaviour of what happens when things are too long}
 \begin{itemize}
 \item one
 \item two
